[package]
name = "wfc_tiled"
version = "1.0.5"
authors = ["reasv <7143787+reasv@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Small library for Wave Function Collapse on Tile-based maps, using the `wfc` crate. Provides Tiled integration."
readme = "README.md"
[dependencies]
csv = "1.1"
wfc = "0.8.1"
image = "0.21"
coord_2d = "0.2"
grid_2d = "0.12"
rand = "0.6"
direction = "0.17"
ron = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
